finalize style edits + thumbnail

--- a/styles.css
+++ b/styles.css
@@ -109,15 +109,15 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 12px;
 }
 
 .nav__link--list {
   display: flex;
+  gap: 0.8em;
+  padding: 0 0.5em;
 }
 
 .nav__link--anchor {
-  margin: 0 12px;
   color: #242424;
   font-weight: 700;
 }
@@ -134,11 +134,9 @@ nav {
   background-color: #5d3eff;
 }
 
-.personal__logo {
-  font-size: 24px;
-  color: #6030b1;
-  margin: 0 12px;
-  font: bold;
+.personal__logo--img {
+  width: 100px;
+  height: 100px;
 }
 
 /* ABOUT ME */
